Messing with CSS

--- a/styles.css
+++ b/styles.css
@@ -7,54 +7,80 @@
   border: 1px solid #ddd;
   padding: 8px;
 }
-/*.dropbtn {
-  background-color: #04AA6D;
+.table-container {
+  display: flex;
+  justify-content: center;
+}
+body {
+  margin: 15px;
+}
+
+.dropbtn {
+  background-color: #0e541a;
+  color: white;
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  width:  247px;/*
+  display:  flex;
+  justify-content: center;*/
+}
+
+/*.dropbtn:hover, .dropbtn:focus {
+  background-color: #0e541a;
+}
+.dropdown-container {
+  display: flex;
+  justify-content: center;
+}
+.dropbtn a:hover{
+  background-color: #f9f9f9;
+}
+
+.dropbtn {
+  background-color: #4CAF50;
   color: white;
   padding: 16px;
   font-size: 16px;
   border: none;
   cursor: pointer;
-}
+}*/
 
-.dropbtn:hover, .dropbtn:focus {
-  background-color: #3e8e41;
-}
-
-#myInput {
-  box-sizing: border-box;
-  background-image: url('searchicon.png');
-  background-position: 14px 12px;
-  background-repeat: no-repeat;
-  font-size: 16px;
-  padding: 14px 20px 12px 45px;
-  border: none;
-  border-bottom: 1px solid #ddd;
-}
-
-#myInput:focus {outline: 3px solid #ddd;}
-
-.dropdown {
+/* The container <div> - needed to position the dropdown content */
+/*.dropdown {
   position: relative;
   display: inline-block;
-}
+}*/
 
-.dropdown-content {
+/* Dropdown Content (Hidden by Default) */
+/*.dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f6f6f6;
-  min-width: 230px;
-  overflow: auto;
-  border: 1px solid #ddd;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
-}
+}*/
 
-.dropdown-content a {
+/* Links inside the dropdown */
+/*.dropdown-content a {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
 }
+*/
+/* Change color of dropdown links on hover */
+.dropbtn a:hover {background-color: #f1f1f1}
 
-.dropdown a:hover {background-color: #ddd;}
+/* Show the dropdown menu on hover */
+/*.dropdown:hover .dropdown-content {
+  display: block;
+}*/
 
-.show {display: block;}*/
+/* Change the background color of the dropdown button when the dropdown content is shown */
+/*.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+  }
+*/
