--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,45 @@
-#results-table {
-  font-family: Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
+:root{
+  --dark_green: #0e541a;
 }
 
-#results-table td, #results-table th {
-  border: 1px solid #ddd;
+#results-table {
+  border-collapse: collapse;
+}
+table, td, th {
+  border: 1px solid var(--dark_green);
   padding: 8px;
 }
-.table-container {
+
+.table-container{
   display: flex;
   justify-content: center;
 }
-body {
-  margin: 15px;
+.dropbtn {
+  background-color: var(--dark_green);
+  color: #ffffff;
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  width:  247px;
 }
 
-.dropbtn {
+body {
+  margin: 15px;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #ffffff;
+}
+
+/*.dropbtn {
   background-color: #0e541a;
   color: white;
   padding: 10px;
   font-size: 16px;
   border: none;
   cursor: pointer;
-  width:  247px;/*
-  display:  flex;
-  justify-content: center;*/
-}
+  width:  247px;
+}*/
 
 /*.dropbtn:hover, .dropbtn:focus {
   background-color: #0e541a;
